--- a/css/styles.css
+++ b/css/styles.css
@@ -7,25 +7,6 @@ body {
   font-family: 'Roboto', 'Tahoma', sans-serif;
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-ul,
-ol {
-  padding-left: 0;
-  margin: 0;
-}
-img {
-  display: block;
-}
-
 /* --------------------- LOGO ---------------------*/
 .header-logo-first-part,
 .footer-logo-first-part {
@@ -90,6 +71,7 @@ img {
 }
 /* -------------------- HERO -----------------------*/
 .hero-section {
+  background: #2f303a;
 }
 .hero-section .container {
 }
