--- a/css/styles.css
+++ b/css/styles.css
@@ -61,11 +61,19 @@ body {
 }
 .header-tel {
   font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
   color: #757575;
   text-decoration: none;
 }
 .header-mail {
   font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
   color: #757575;
   text-decoration: none;
 }
@@ -96,6 +104,7 @@ body {
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
+  text-transform: uppercase;
   color: #ffffff;
 }
 /* -------------benefits-section----------------- */
@@ -118,22 +127,29 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+
   text-transform: uppercase;
   color: var(--h-text-color);
 }
+
 .benefits-text {
+  max-width: 270px;
+
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  max-width: 270px;
+
+  color: #757575;
 }
 .benefits-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+
   color: var(--h-text-color);
 }
+
 /* --------------team-section -----------*/
 .team-section {
   background: #f5f4fa;
@@ -155,6 +171,8 @@ body {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+
+  color: #757575;
 }
 /* -------------footer------------------------------------------- */
 .footer {
@@ -164,7 +182,6 @@ body {
   font-style: normal;
 }
 .footer-address-text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
